# hpc-research-toolkit

./: .gitignore  README.md
.bashrc/: aliases.sh  func.sh
apps/analysis/depth_overlay/: pyproject.toml
apps/analysis/depth_overlay/configs/: default.json  logging_jsonl.json  logging_verbos.json  re10k_dense.json
apps/analysis/depth_overlay/configs/logging/: default_logging.json  re10k_dense_logging.json
apps/analysis/depth_overlay/scripts/: run_depth_overlay.py
apps/analysis/depth_overlay/src/: cli.py
apps/analysis/depth_overlay_compare/: TODO.txt  pyproject.toml
apps/analysis/depth_overlay_compare/configs/: default.json  logging_jsonl.json
apps/analysis/depth_overlay_compare/scripts/: __init__.py  compare_overlay.py
apps/analysis/depth_overlay_compare/src/: cli.py  compare_overlay.py
apps/analysis/depth_overlay_compare/src/modules/: logger.py
apps/analysis/plot_lib/depth_overlay/configs/: default.json  default_logging.json  logging_verbos.json
apps/analysis/plot_lib/depth_overlay/logs/: app.log.jsonl  def_log.jsonl
apps/analysis/plot_lib/depth_overlay/scripts/: run_depth_overlay.py
apps/analysis/plot_lib/depth_overlay/src/: cli.py
apps/analysis/plot_lib/depth_overlay_compare/: pyproject.toml
apps/analysis/plot_lib/depth_overlay_compare/src/modules/: cli.py  plot.py  util.py
apps/rendering/viser/dl3dv/: pyproject.toml  render_scene.py  render_scene_v2.py
apps/rendering/viser/dl3dv/drafts/: render.py  render_scene_with_normals.py
apps/rendering/viser/dl3dv/logs/: log.txt  log_2.txt  log_3.txt  log_4.txt  log_7.txt
apps/rendering/viser/wai-vis/: main.py  pyproject.toml  requirements.txt
apps/rendering/viser/wai-vis/modules/: dataset.py  geometry.py  logger.py  renderer.py  util.py
research_utils/: pyproject.toml
research_utils/src/research_utils/: __init__.py
research_utils/src/research_utils/core/: __init__.py  args.py  camera.py  io.py  logger.py  path.py  util.py
research_utils/src/research_utils/io/: __init__.py  image.py  io.py
research_utils/src/research_utils/io/test/: test_config_equivalence.py
research_utils/src/research_utils/logging/: __init__.py  clr_picker.py  handlers.py
research_utils/src/research_utils/logging/_archive/: handlers.py
research_utils/src/research_utils/logging/test/: test.py
research_utils/src/research_utils/ops/geometry/: __init__.py  camera.py  coordinates.py  grids.py  rotations.py  transformations.py
research_utils/src/research_utils/viz/: __init__.py  comparison.py  comparison_util.py  overlay.py
research_utils/src/research_utils/viz/archive/: plot.py
scripts/archive/: check_statistics_v1.py  check_statistics_v2.py  plot_depth.py
scripts/bash/: setup_new_env.sh
scripts/python/: change_resolution.py  check_statistics_by_folder.py  plot_depth_overlay.py  plot_exr.py
scripts/python/archive/: plot_depth.py
scripts/slurm/: change_resolution.sh  check_statistics_raw.sh  check_statistics_raw_by_folder.sh  consistency.sh  covisibility.sh  depth_consistency_confidence_mvsa.sh  download_hf_moge.sh  env_test.sh  run_moge_[gpu].sh  run_mvsa.sh  undistortion.sh  viz_data.sh  viz_data_folder.sh  viz_data_folder_interactive_3D.sh
scripts/slurm/da3/: da3_demo.sh  depth_anything3_test.sh  run_on_folder.sh
scripts/slurm/depth_anything3/: create_dataset_conf.sh  create_dense_dataset.sh  create_dense_dataset_main.sh  create_dense_dataset_v2.sh  create_dense_subsample_dry.sh  create_dummy_dataset.sh  da3_demo.sh  debug_resize.sh  depth_anything3_test.sh  run_on_folder.sh
scripts/slurm/preprocessing/: undistortion.sh
scripts/slurm/re10k_dense/: setup_venv.sh
scripts/slurm/re10k_dense/loader/: debug_loader_4DCLF_env.sh  debug_loader_min_env.sh
scripts/slurm/setup/: download_hf_moge.sh  env_test.sh
scripts/slurm/visualization/: viz_data_folder.sh
