[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-utils"
version = "0.1.0"
description = "Research utilities package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
