[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-utils"
version = "0.1.0"
description = "Research utilities package"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "tqdm>=4.60.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
