[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl3dv"
version = "0.1.0"
description = "Scene rendering scripts for 3D visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "viser",
    "numpy",
    "opencv-python",
    "imageio",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

