[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wai-vis"
version = "0.1.0"
description = "Interactive web-based 3D visualization tool for WAI/Nerfstudio datasets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "viser",
    "numpy",
    "opencv-python",
    "pillow",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

